# winduino

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fetch_deps.cmd  main_test.cpp  run.cmd
include/: spi_screen.h  winduino.hpp
include/assets/: architects_daughter.hpp
src/: main.cpp  main_backup.cpp  winduino.cpp
winduino/: Arduino.cpp  Arduino.h  FS.cpp  FS.h  FsImpl.h  HardwareSerial.cpp  HardwareSerial.h  Print.cpp  Printable.h  SD.cpp  SD.h  SPI.cpp  SPI.h  StdioFSImpl.cpp  StdioFSImpl.h  Stream.cpp  Stream.h  StreamString.cpp  StreamString.h  WCharacter.h  WMath.cpp  WMath.h  WString.cpp  WString.h  Wire.cpp  Wire.h  binary.h  stdlib_noniso.c  stdlib_noniso.h
winduino/avr/: pgmspace.h
winduino_hardware/spi_screen/: CMakeLists.txt  spi_screen.cpp  spi_screen.h  spi_screen_lib.h
